force-app/main/default/objects/Grade_Enrollment__c/Grade_Enrollment__c.object-meta.xml
<CustomObject>
    <description>A student&apos;s enrollment in a particular grade at a given educational institution.</description>
    <label>Grade Enrollment</label>
    <nameField>
        <displayFormat>GRN-{0000}</displayFormat>
        <label>Grade Enrollment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Grade Enrollments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>