force-app/main/default/objects/Grade_Enrollment__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The student enrolled in the given Grade Level.</description>
    <inlineHelpText>The student enrolled in the given Grade Level.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Grade_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>