force-app/main/default/objects/Grade_Enrollment__c/fields/Education_History__c.field-meta.xml
<CustomField>
    <fullName>Education_History__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Education History record related to this Grade Enrollment.</description>
    <inlineHelpText>The Education History record related to this Grade Enrollment.</inlineHelpText>
    <label>Education History</label>
    <referenceTo>hed__Education_History__c</referenceTo>
    <relationshipLabel>Grade Enrollments</relationshipLabel>
    <relationshipName>Grade_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>