force-app/main/default/objects/Grade_Enrollment__c/fields/Educational_Institution__c.field-meta.xml
<CustomField>
    <fullName>Educational_Institution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The school this student is enrolled in.</description>
    <inlineHelpText>The school this student is enrolled in.</inlineHelpText>
    <label>Educational Institution</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Grade_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>