force-app/main/default/objects/Grade_Enrollment__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>The End Date for this Grade Level enrollment.</description>
    <inlineHelpText>The End Date for this Grade Level enrollment.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>