force-app/main/default/objects/Grade_Enrollment__c/fields/Entry_Reason__c.field-meta.xml
<CustomField>
    <fullName>Entry_Reason__c</fullName>
    <description>The reason a student enrolled in this Grade Level.</description>
    <inlineHelpText>The reason a student enrolled in this Grade Level.</inlineHelpText>
    <label>Entry Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Promoted</fullName>
            </value>
            <value>
                <fullName>Repeated Grade</fullName>
            </value>
            <value>
                <fullName>Skipped Grade</fullName>
            </value>
            <value>
                <fullName>Transferred In</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>