force-app/main/default/objects/Grade_Enrollment__c/fields/Exit_Reason__c.field-meta.xml
<CustomField>
    <fullName>Exit_Reason__c</fullName>
    <description>The reason a student exited this Grade Level.</description>
    <inlineHelpText>The reason a student exited this Grade Level.</inlineHelpText>
    <label>Exit Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deceased</fullName>
            </value>
            <value>
                <fullName>Expelled</fullName>
            </value>
            <value>
                <fullName>No Show</fullName>
                <label>No-Show</label>
            </value>
            <value>
                <fullName>Promoted</fullName>
            </value>
            <value>
                <fullName>Skipped Grade</fullName>
            </value>
            <value>
                <fullName>Transferred Out</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>