force-app/main/default/objects/Grade_Enrollment__c/fields/Grade_Level__c.field-meta.xml
<CustomField>
    <fullName>Grade_Level__c</fullName>
    <description>The Grade Level for this enrollment.</description>
    <inlineHelpText>The Grade Level for this enrollment.</inlineHelpText>
    <label>Grade Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Grade_Levels</valueSetName>
    </valueSet>
</CustomField>