force-app/main/default/objects/Grade_Enrollment__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>The date this Grade Level enrollment is expected to start or has started.</description>
    <inlineHelpText>The date this Grade Level enrollment is expected to start or has started.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>