force-app/main/default/objects/Grade_Enrollment__c/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Term associated with this Grade Level enrollment.</description>
    <inlineHelpText>The Term associated with this Grade Level enrollment.</inlineHelpText>
    <label>Term</label>
    <referenceTo>hed__Term__c</referenceTo>
    <relationshipLabel>Grade Enrollments</relationshipLabel>
    <relationshipName>Grade_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>